--- a/style/style.css
+++ b/style/style.css
@@ -1,26 +1,58 @@
 @font-face {
     font-family: "Montserrat";
-    src: url('/style/Fonts/Montserrat-Bold.otf');
+    src: url('./Fonts/Montserrat-Regular.otf');
+}
+
+@font-face {
+    font-family: "Montserrat-bold";
+    src: url('./Fonts/Montserrat-Bold.otf');
+}
+@font-face {
+    font-family: "Montserrat-light";
+    src: url('./Fonts/Montserrat-Light.otf');
 }
 
 body {
     margin: 0;
-    background-color: antiquewhite;
+    padding: 0;
     font-family: "Montserrat", sans-serif;
+    color: white;
 }
 
+.wrapper {
+    background-image: url("../images/background1.jpg");
+    background-size: cover;
+    height: 100vh;
+}
+
+.menu {
+    position: absolute;
+    top: 50px;
+    left: 50px;
+}
+
+.content {
+    position: absolute;
+    bottom: 400px;
+    left: 150px;
+}
+
+a {
+    font-family: "Montserrat-light", sans-serif;
+    font-size: 14px;
+}
+
+h1{
+    font-family: "Montserrat-bold", sans-serif;
+    font-size: 106px;
+}
 
 .nav {
-
     background: transparent;
 }
 
 .bg-light {
     background-color: transparent!important;
-}
-
-ul {
-    text-transform: uppercase;
 }
 
 .uppercase {
@@ -32,5 +64,9 @@ ul {
 }
 
 .lighter {
-    font-weight: lighter;
+    font-family: "Montserrat-light", sans-serif;
+}
+
+a {
+    color: white!important;
 }
